fix: horizontal scrolling on mobile resolution

--- a/front/src/style/arch.css
+++ b/front/src/style/arch.css
@@ -24,3 +24,11 @@ th {
 	background-color: var(--dark-base);
 	color: var(--background-color);
 }
+
+@media only screen and (max-width: 1600px) {
+	table {
+		width: 100%;
+		display: block;
+		overflow-x: auto;
+	}
+}
